prefs: save to filename when available

* gdict-source-dialog.c: if ::filename property is set, use its
	value to save the modified source.
	* See https://bugzilla.gnome.org/show_bug.cgi?id=528956